0.18.1 (2016-04-17):
* Clear AA bit on requests, as some servers will drop these otherwise

0.18.0 (2016-03-12):
* Remove dependency on camlp4, switch to ppx

0.17.0 (2016-03-11):
* This library now depends on the `hashcons` package rather than
  containing a fork of it. Now that there is no LGPL (+ linking exception)
  code left, clarify that the license is ISC. Previously the `opam`
  file claimed a mixture of licenses (#86 via @djs55).
* Add multi-distro Travis testing support.
* Library now depends on OCaml 4.02+

0.16.0 (2015-10-21):
* Change source port randomization to avoid overflow in the port range
  (#83 from @yomimono).

Improve mDNS support (#82 from Luke Dunstan):
* Add `Dns.Probe` to implement the unique name probing portion of mDNS.
* Expose the `Dns.Name.Set` construct.
* Added a functor `Mdns_resolver_mirage.Chain` that is intended to compose
  an mDNS resolver with a normal DNS resolver such that `*.local` is resolved
  via mDNS and everything else is done with DNS.
* Changed `Dns.Query` to not respond to queries for classes other than IN.
* Fixed mDNS legacy responses to use TTL <= 10 sec
* Fixed mDNS responses to use RD=0.

0.15.3 (2015-07-30):
* Fix regression in 0.15.2 which prevented Dns_server_unix.listen from
  answering more than one query (#80 from Magnus Skjegstad)

0.15.2 (2015-07-04):
* Fix incorrect mirage dependency on tcpip
* Improve clarity and formatting of Lwt use
* Remove camlp4 dependency
* Now requires lwt >2.4.7

0.15.1 (2015-07-02):
* Fix critical DNS resolver timeout bug causing unexpected exceptions

0.15.0 (2015-05-14):
* Name.domain_name has been renamed to Name.t and is now abstract
* Name.domain_name_to_string has been renamed to Name.to_string
* Name.string_to_domain_name has been deprecated for Name.of_string
* Name.parse_name has been renamed to Name.parse
* Name.marshal_name has been renamed to Name.marshal
* Name.hashcons_charstring has been renamed to Name.hashcons_string