@@ -55,7 +55,7 @@ Library "dns-lwt-mirage"
   Install$: flag(mirage)
   Findlibname: mirage
   Modules: Dns_server_mirage, Dns_resolver_mirage, Mdns_resolver_mirage
-  BuildDepends: cstruct, lwt, dns, dns.lwt-core, mirage-types, io-page
+  BuildDepends: cstruct, lwt, dns, dns.lwt-core, mirage-types, io-page, duration
   FindlibParent: dns
 
 Library "dns-lwt-core"
