@@ -1,5 +1,5 @@
 # OASIS_START
-# DO NOT EDIT (digest: 3519c9d29216c801c9f49b636c00e546)
+# DO NOT EDIT (digest: b001eb1fe0ac596db22a8406631eb0ac)
 # Ignore VCS directories, you can use the same kind of rule outside
 # OASIS_START/STOP if you want to exclude directories that contains
 # useless stuff for the build process
@@ -48,6 +48,7 @@ true: annot, bin_annot
 <mirage/*.ml{,i,y}>: pkg_bytes
 <mirage/*.ml{,i,y}>: pkg_cstruct
 <mirage/*.ml{,i,y}>: pkg_cstruct.ppx
+<mirage/*.ml{,i,y}>: pkg_duration
 <mirage/*.ml{,i,y}>: pkg_hashcons
 <mirage/*.ml{,i,y}>: pkg_io-page
 <mirage/*.ml{,i,y}>: pkg_ipaddr
@@ -209,6 +210,7 @@ true: annot, bin_annot
 <lib_test/ounit/test.{native,byte}>: pkg_bytes
 <lib_test/ounit/test.{native,byte}>: pkg_cstruct
 <lib_test/ounit/test.{native,byte}>: pkg_cstruct.ppx
+<lib_test/ounit/test.{native,byte}>: pkg_duration
 <lib_test/ounit/test.{native,byte}>: pkg_hashcons
 <lib_test/ounit/test.{native,byte}>: pkg_io-page
 <lib_test/ounit/test.{native,byte}>: pkg_io-page.unix
@@ -231,6 +233,7 @@ true: annot, bin_annot
 <lib_test/ounit/*.ml{,i,y}>: pkg_bytes
 <lib_test/ounit/*.ml{,i,y}>: pkg_cstruct
 <lib_test/ounit/*.ml{,i,y}>: pkg_cstruct.ppx
+<lib_test/ounit/*.ml{,i,y}>: pkg_duration
 <lib_test/ounit/*.ml{,i,y}>: pkg_hashcons
 <lib_test/ounit/*.ml{,i,y}>: pkg_io-page
 <lib_test/ounit/*.ml{,i,y}>: pkg_io-page.unix
