@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.4.5 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: d2d8408eedae6f6448b1b4517d728cf7) *)
+(* DO NOT EDIT (digest: 140deaa28cf12d72c9c12ff23b4dbc9e) *)
 (*
    Regenerated by OASIS v0.4.7
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -7483,7 +7483,8 @@ let setup_t =
                            InternalLibrary "dns";
                            InternalLibrary "dns-lwt-core";
                            FindlibPackage ("mirage-types", None);
-                           FindlibPackage ("io-page", None)
+                           FindlibPackage ("io-page", None);
+                           FindlibPackage ("duration", None)
                         ];
                       bs_build_tools = [ExternalTool "ocamlbuild"];
                       bs_interface_patterns =
@@ -8969,7 +8970,7 @@ let setup_t =
        };
      oasis_fn = Some "_oasis";
      oasis_version = "0.4.7";
-     oasis_digest = Some ":x\216\224\020\158\029\157k\183u\208@\012R\141";
+     oasis_digest = Some "\184?;\222\018\181L%\232\022#\207\174\193a\178";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false
@@ -8977,7 +8978,7 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 8981 "setup.ml"
+# 8982 "setup.ml"
 let setup_t = BaseCompat.Compat_0_4.adapt_setup_t setup_t
 open BaseCompat.Compat_0_4
 (* OASIS_STOP *)
