@@ -1,3 +1,6 @@
+trunk:
+* Port to MirageOS 3 module types.
+
 0.18.1 (2016-04-17):
 * Clear AA bit on requests, as some servers will drop these otherwise
 
